--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -2,14 +2,14 @@
 
 @if(block.trails.nonEmpty){
 
-    <section class="front-section zone-@block.description.section @block.description.style.map(_.className) @if(block.description.showMore){ js-show-more}"
+    <section class="front-section zone-@block.description.section @if(block.description.showMore){ js-show-more}"
              data-link-name="block | @block.description.name"
              data-section-id="@block.description.id"
              @defining(Edition(request).id.toLowerCase()) { edition =>
                  data-link-context="@if(block.description.section == "news"){@edition}else{@edition/@block.description.section}">
              }
 
-        @if(block.description.id != "") {
+        @if(block.description.id != "" && block.description.style != Some(Masthead)) {
             @if(index == 0 && !page.isNetworkFront) {
                 @fragments.headers.sectionHead(block.description.name)
             } else {
@@ -17,7 +17,7 @@
             }
         }
 
-        <div class="front-trailblock-@SafeName(block.description)">
+        <div class="front-trailblock-@SafeName(block.description) trailblock trailblock--@block.description.style.map(_.className)">
             @block.description.style match {
                 case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
                 case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
