--- a/common/app/assets/stylesheets/module/experiments/_bar.scss
+++ b/common/app/assets/stylesheets/module/experiments/_bar.scss
@@ -1,7 +1,7 @@
 .swipe-bar {
     display: block;
     position: fixed;
-    top: 0;
+    bottom: 0;
     height: 36px;
     width: 100%;
     z-index: 9999;
