--- a/identity/app/views/request_password_reset.scala.html
+++ b/identity/app/views/request_password_reset.scala.html
@@ -6,14 +6,13 @@
 
 }{
 <form class="form" novalidate action="/recover" role="main" method="post">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu pharetra sapien</p>
+
+    @if( message ) {
+         <p> @message </p>
+    }
 
     @if(form.globalError.isDefined) {
         <div class="form-field__error text-input__note">@form.globalErrors.map(_.message).mkString(", ")</div>
-    }
-
-    @if(message) {
-       <p> ${message}</p>
     }
 
     <ul class="form-fields">
