--- a/identity/app/views/reset_password.scala.html
+++ b/identity/app/views/reset_password.scala.html
@@ -1,10 +1,10 @@
-@(page: MetaData, resetPasswordForm: Form[(String, String, String)])(implicit request: RequestHeader )
+@(page: MetaData, idRequest: services.IdentityRequest, idUrlBuilder: services.IdentityUrlBuilder, resetPasswordForm: Form[(String, String)], token : String)(implicit request: RequestHeader )
 
 @import views.html.fragments.form.idInputPassword
 
 @main(page, Switches.all){
 }{
-<form class="form" novalidate action="/reset-password"  method="post">
+<form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-token", idRequest)/@token"  method="post">
 
     <p> Please supply your new password </p>
 
@@ -14,7 +14,7 @@
     <ul class="form-fields">
         @idInputPassword(resetPasswordForm("password"), '_label -> "Password")
         @idInputPassword(resetPasswordForm("password_confirm"), '_label -> "Confirm Password")
-        <input type="hidden" value="@resetPasswordForm("password_confirm")" name="token"/>
+
         <li>
             <button type="submit" class="submit-input">Submit</button>
         </li>
