--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -6,86 +6,98 @@
 
 .i-arrow-white-down { background-position: -35px -8px; width: 15px; height: 7.319px; }
 
-.i-close-icon { background-position: -50px -8px; width: 15px; height: 15px; }
+.i-clock-blue { background-position: -50px -8px; width: 13px; height: 13px; }
 
-.i-comment-count-small { background-position: -65px -8px; width: 14px; height: 12px; }
+.i-clock-grey { background-position: -63px -8px; width: 13px; height: 13px; }
 
-.i-date { background-position: -79px -8px; width: 10px; height: 10px; }
+.i-clock-pink { background-position: -76px -8px; width: 13px; height: 13px; }
 
-.i-ee-add-button { background-position: -89px -8px; width: 54px; height: 47px; }
+.i-close-icon { background-position: -89px -8px; width: 15px; height: 15px; }
 
-.i-fb { background-position: -157px -8px; width: 10.88px; height: 22.38px; }
+.i-comment-blue { background-position: -104px -8px; width: 15px; height: 15px; }
 
-.i-filter-arrow-down { background-position: -167px -8px; width: 20px; height: 11.431px; }
+.i-comment-count-small { background-position: -119px -8px; width: 14px; height: 12px; }
 
-.i-filter-arrow-left { background-position: -187px -8px; width: 8.703px; height: 15px; }
+.i-comment-grey { background-position: -133px -8px; width: 15px; height: 15px; }
 
-.i-filter-arrow-right { background-position: -195px -8px; width: 8.702px; height: 15px; }
+.i-comment-pink { background-position: -148px -8px; width: 15px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -203px -8px; width: 20px; height: 11.431px; }
+.i-date { background-position: -163px -8px; width: 10px; height: 10px; }
 
-.i-fullscreen-toggle { background-position: -223px -8px; width: 12px; height: 12px; }
+.i-ee-add-button { background-position: -173px -8px; width: 54px; height: 47px; }
 
-.i-gallery-arrow { background-position: -235px -8px; width: 7.333px; height: 16.333px; }
+.i-fb { background-position: -241px -8px; width: 10.88px; height: 22.38px; }
 
-.i-gallery-fullimage-icon { background-position: -242px -8px; width: 15px; height: 15px; }
+.i-filter-arrow-down { background-position: -251px -8px; width: 20px; height: 11.431px; }
 
-.i-gallery-thumb-icon { background-position: -257px -8px; width: 15px; height: 15px; }
+.i-filter-arrow-left { background-position: -271px -8px; width: 8.703px; height: 15px; }
 
-.i-gallery { background-position: -272px -8px; width: 16px; height: 14px; }
+.i-filter-arrow-right { background-position: -279px -8px; width: 8.702px; height: 15px; }
 
-.i-gplus { background-position: -288px -8px; width: 24.361px; height: 20.535px; }
+.i-filter-arrow-up { background-position: -287px -8px; width: 20px; height: 11.431px; }
 
-.i-guardian-logo { background-position: -312px -8px; width: 107.667px; height: 20.125px; }
+.i-fullscreen-toggle { background-position: -307px -8px; width: 12px; height: 12px; }
 
-.i-guardian-picks { background-position: -419px -8px; width: 15px; height: 46.624px; }
+.i-gallery-arrow { background-position: -319px -8px; width: 7.333px; height: 16.333px; }
 
-.i-image-white { background-position: -434px -8px; width: 12px; height: 9px; }
+.i-gallery-fullimage-icon { background-position: -326px -8px; width: 15px; height: 15px; }
 
-.i-image { background-position: -446px -8px; width: 12px; height: 9px; }
+.i-gallery-thumb-icon { background-position: -341px -8px; width: 15px; height: 15px; }
 
-.i-livequote-after { background-position: -458px -8px; width: 37px; height: 20px; }
+.i-gallery { background-position: -356px -8px; width: 16px; height: 14px; }
 
-.i-livequote-before { background-position: -495px -8px; width: 37px; height: 20px; }
+.i-gplus { background-position: -372px -8px; width: 24.361px; height: 20.535px; }
 
-.i-local-nav-arrow { background-position: -532px -8px; width: 49px; height: 37px; }
+.i-guardian-logo { background-position: -396px -8px; width: 107.667px; height: 20.125px; }
 
-.i-mail { background-position: -434px -45px; width: 28.004px; height: 20px; }
+.i-guardian-picks { background-position: -503px -8px; width: 15px; height: 46.624px; }
 
-.i-menu-active { background-position: -462px -45px; width: 18px; height: 12px; }
+.i-image-white { background-position: -518px -8px; width: 12px; height: 9px; }
 
-.i-menu { background-position: -480px -45px; width: 18px; height: 12px; }
+.i-image { background-position: -530px -8px; width: 12px; height: 9px; }
 
-.i-powered-by-ee { background-position: -498px -45px; width: 68px; height: 31px; }
+.i-livequote-after { background-position: -542px -8px; width: 37px; height: 20px; }
 
-.i-profile-active { background-position: -566px -45px; width: 15px; height: 15px; }
+.i-livequote-before { background-position: -518px -28px; width: 37px; height: 20px; }
 
-.i-profile { background-position: -566px -60px; width: 15px; height: 15px; }
+.i-local-nav-arrow { background-position: -518px -48px; width: 49px; height: 37px; }
 
-.i-quote-marks { background-position: -8px -76px; width: 64px; height: 32px; }
+.i-mail { background-position: -8px -85px; width: 28.004px; height: 20px; }
 
-.i-red-card { background-position: -86px -76px; width: 9px; height: 12px; }
+.i-menu-active { background-position: -36px -85px; width: 18px; height: 12px; }
 
-.i-search-blue { background-position: -95px -76px; width: 14px; height: 14px; }
+.i-menu { background-position: -54px -85px; width: 18px; height: 12px; }
 
-.i-search { background-position: -109px -76px; width: 14px; height: 14px; }
+.i-powered-by-ee { background-position: -72px -85px; width: 68px; height: 31px; }
 
-.i-sport-arrow-small { background-position: -123px -76px; width: 5.802px; height: 10px; }
+.i-profile-active { background-position: -140px -85px; width: 15px; height: 15px; }
 
-.i-sport-arrow { background-position: -128px -76px; width: 8.703px; height: 15px; }
+.i-profile { background-position: -155px -85px; width: 15px; height: 15px; }
 
-.i-story-quote { background-position: -136px -76px; width: 49px; height: 25px; }
+.i-quote-marks { background-position: -170px -85px; width: 64px; height: 32px; }
 
-.i-swipe-arrow-small { background-position: -185px -76px; width: 5px; height: 10px; }
+.i-red-card { background-position: -248px -85px; width: 9px; height: 12px; }
 
-.i-swipe-arrow { background-position: -190px -76px; width: 7.21px; height: 16.117px; }
+.i-search-blue { background-position: -257px -85px; width: 14px; height: 14px; }
 
-.i-top-stories-active { background-position: -197px -76px; width: 16px; height: 16px; }
+.i-search { background-position: -271px -85px; width: 14px; height: 14px; }
 
-.i-top-stories { background-position: -213px -76px; width: 16px; height: 16px; }
+.i-sport-arrow-small { background-position: -285px -85px; width: 5.802px; height: 10px; }
 
-.i-twitter { background-position: -229px -76px; width: 25px; height: 20px; }
+.i-sport-arrow { background-position: -290px -85px; width: 8.703px; height: 15px; }
 
-.i-witness-logo { background-position: -254px -76px; width: 119px; height: 16px; }
+.i-story-quote { background-position: -298px -85px; width: 49px; height: 25px; }
 
-.i-yellow-card { background-position: -373px -76px; width: 9px; height: 12px; }
+.i-swipe-arrow-small { background-position: -347px -85px; width: 5px; height: 10px; }
+
+.i-swipe-arrow { background-position: -352px -85px; width: 7.21px; height: 16.117px; }
+
+.i-top-stories-active { background-position: -359px -85px; width: 16px; height: 16px; }
+
+.i-top-stories { background-position: -375px -85px; width: 16px; height: 16px; }
+
+.i-twitter { background-position: -391px -85px; width: 25px; height: 20px; }
+
+.i-witness-logo { background-position: -416px -85px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -535px -85px; width: 9px; height: 12px; }
