--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -1,8 +1,14 @@
 <table class="styleguide-table styleguide-table-two-col sprite-table"><thead><tr><th class="type-11">CSS selector</th><th class="type-11">Output</th></tr></thead><tbody><tr><td class="type-9">.i-arrow-blue-down</td><td class="sprite-cell"><i class="i i-arrow-blue-down"></i></td></tr>
 <tr><td class="type-9">.i-arrow-small-up</td><td class="sprite-cell"><i class="i i-arrow-small-up"></i></td></tr>
 <tr><td class="type-9">.i-arrow-white-down</td><td class="sprite-cell"><i class="i i-arrow-white-down"></i></td></tr>
+<tr><td class="type-9">.i-clock-blue</td><td class="sprite-cell"><i class="i i-clock-blue"></i></td></tr>
+<tr><td class="type-9">.i-clock-grey</td><td class="sprite-cell"><i class="i i-clock-grey"></i></td></tr>
+<tr><td class="type-9">.i-clock-pink</td><td class="sprite-cell"><i class="i i-clock-pink"></i></td></tr>
 <tr><td class="type-9">.i-close-icon</td><td class="sprite-cell"><i class="i i-close-icon"></i></td></tr>
+<tr><td class="type-9">.i-comment-blue</td><td class="sprite-cell"><i class="i i-comment-blue"></i></td></tr>
 <tr><td class="type-9">.i-comment-count-small</td><td class="sprite-cell"><i class="i i-comment-count-small"></i></td></tr>
+<tr><td class="type-9">.i-comment-grey</td><td class="sprite-cell"><i class="i i-comment-grey"></i></td></tr>
+<tr><td class="type-9">.i-comment-pink</td><td class="sprite-cell"><i class="i i-comment-pink"></i></td></tr>
 <tr><td class="type-9">.i-date</td><td class="sprite-cell"><i class="i i-date"></i></td></tr>
 <tr><td class="type-9">.i-ee-add-button</td><td class="sprite-cell"><i class="i i-ee-add-button"></i></td></tr>
 <tr><td class="type-9">.i-fb</td><td class="sprite-cell"><i class="i i-fb"></i></td></tr>
