--- a/common/app/views/fragments/trails/headlineExpandable.scala.html
+++ b/common/app/views/fragments/trails/headlineExpandable.scala.html
@@ -11,13 +11,35 @@
         </a>
     </h@headingLevel>
 
+    <div class="trail__expander-show">
+        <figure class="media-primary">
+        @trail.thumbnailPath.map{ thumbnailPath =>
+            @trail.mainPicture(width=220).map { largeCrop =>
+                <a href="@LinkTo{@trail.url}" class="media__img trail__img" data-link-name="@rowNum | image" aria-hidden="true">
+                    <img class="maxed main-image" data-lowsrc="@thumbnailPath"
+                        data-thumb-width="140"
+                            data-fullsrc="@largeCrop.path"
+                            data-full-width="@largeCrop.width"
+                            alt=""
+                        itemprop="contentURL"
+                    />
+                </a>
+                @if(largeCrop.caption.headOption.getOrElse("").trim != "") {
+                    <div class="main-caption trail__expander-show">
+                        <figcaption itemprop="description">@StripHtmlTagsAndUnescapeEntities(largeCrop.caption.getOrElse(""))</figcaption>
+                    </div>
+                }
+            }
+        }
+        </figure>
+    </div>
+
     @trail.trailText.map { text => <div class="trail__text trail__expander-hide">@cleanTrailText(text)(Edition(request))</div> }
     <p class="byline trail__expander-show"><a href="">Jean Bonneau</a></p>
     <div class="from-content-api trail__expander-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nihil dicta ea est iure harum dolore laborum cum numquam eos possimus perspiciatis doloremque quas provident!</p>
-        <p>Esse sint id quas sapiente ipsa vero animi ut aspernatur et quia. Veniam voluptatibus veritatis repellendus labore numquam non quo molestiae odio facere dolor exercitationem.</p>
-        <p>Sunt quas molestias maxime dolore rem exercitationem vel ut commodi vero rerum praesentium blanditiis laudantium eius error obcaecati? Ipsam reiciendis earum commodi eum blanditiis laudantium!</p>
-        <p>Quis illum distinctio nulla veritatis laboriosam iste praesentium suscipit voluptate error quidem id sunt reprehenderit asperiores explicabo sequi aspernatur quasi obcaecati ex hic cum vero.</p>
+        @if(!trail.leadingParagraphs.isEmpty) {
+            @trail.leadingParagraphs.take(4).map { paragraph => <p>@Html(paragraph.html())</p> }
+        }
         <p><a href="@LinkTo{@trail.url}" data-link-name="@rowNum | read full article" aria-hidden="true">Read the full article</a></p>
     </div>
 
